--- a/problem_sets/PS2/PS2_completed/PS2_answers.tex
+++ b/problem_sets/PS2/PS2_completed/PS2_answers.tex
@@ -173,7 +173,8 @@ There is a physiological cost of reproduction for fruit flies, such that it redu
 	
 	\item
 	Import the data set and obtain summary statistiscs and examine the distribution of the overall lifespan of the fruitflies.  
-
+	\lstinputlisting[language=R, firstline=86, lastline=89]{PS2_answers_farhan.R}
+	
 \newpage
 	\item
 	Plot \texttt{lifespan} vs \texttt{thorax}. Does it look like there is a linear relationship? Provide the plot. What is the correlation coefficient between these two variables?
